fixed scrollbars

--- a/frontend/src/app/stories-bar/stories-bar.component.css
+++ b/frontend/src/app/stories-bar/stories-bar.component.css
@@ -28,15 +28,19 @@ mat-tab-group{
   height: calc(100% - 65px);
 }
 
-.itemListDiv {
+.itemListDiv{
   height: calc(100% - 125px);
 }
 
-.itemListDivNotCustom{
+.storyListDivNotCustom{
   height: calc(100% - 110px);
 }
 
-.itemListDiv>ul{
+.storyListDivWithFilter{
+  height: calc(100% - 235px);
+}
+
+.itemListDiv>ul, .storyListDivNotCustom>ul, .storyListDivWithFilter>ul{
   height: 100%;
   overflow: scroll;
 }
@@ -335,7 +339,6 @@ a.storyListLink:hover{
     "storyList";
 }
 }
-
 .darkTheme .uk-accordion-title::before {
   background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMThweCIgdmlld0JveD0iMCAwIDI0IDI0IiB3aWR0aD0iMThweCIgZmlsbD0iI0ZGRkZGRiI+PHBhdGggZD0iTTAgMGgyNHYyNEgwVjB6IiBmaWxsPSJub25lIi8+PHBhdGggZD0iTTE5IDEzaC02djZoLTJ2LTZINXYtMmg2VjVoMnY2aDZ2MnoiLz48L3N2Zz4=);
   width: 19px;
@@ -351,6 +354,10 @@ a.storyListLink:hover{
 .darkTheme ::-webkit-scrollbar-corner{
   background: none !important;
 }
+::-webkit-scrollbar{
+  width: 10px; /* Adjust the width as needed */
+}
+
 .tab-icon{
   color: var(--brown-grey);
   margin-bottom: 12px;
